--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.10",
-    "node": "^12.8.0"
+    "mongoose": "^5.6.10"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.2"
   }
 }
