--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "react": "cd ./React && npm run-script start"
-    "build" : "react-script build"
+    "build" : "react-scripts build"
   },
   "author": "",
   "license": "ISC",
