--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "react": "cd ./React && npm run-script start"
+    "react": "cd ./React && npm run-script start",
     "build" : "react-scripts build"
   },
   "author": "",
