--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongoose": "^5.6.10"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
       "bower":"^1.8.0",
     "grunt":"^1.0.1",
     
